--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>茄子直播</title>
+    <title>全国青少年校园足球赛事后台管理</title>
   </head>
   <body>
     <noscript>
